# sepVector

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  log  sepVectorConfig.cmake  sepVectorConfig.cmake.in  ~
SEP/: CMakeLists.txt  SepVector.py  pyVector.cpp
build-script/: build-docker-debian  build-nix
build-scripts/: build-nix
dockers/: Dockerfile.centos  Dockerfile.debian  Dockerfile.devel
docs/: Doxyfile.in
env-modules/: CMakeLists.txt  Makefile
lib/: CMakeLists.txt  Makefile  Vector.cc  Vector.h  byte1DReg.cc  byte1DReg.h  byte2DReg.cc  byte2DReg.h  byte3DReg.cc  byte3DReg.h  byte4DReg.cc  byte4DReg.h  byte5DReg.cc  byte5DReg.h  byte6DReg.cc  byte6DReg.h  byteHyper.cc  byteHyper.h  byteTensor.cc  byteTensor.h  cmake_install.cmake  complex1DReg.cc  complex1DReg.h  complex2DReg.cc  complex2DReg.h  complex3DReg.cc  complex3DReg.h  complex4DReg.cc  complex4DReg.h  complex5DReg.cc  complex5DReg.h  complex6DReg.cc  complex6DReg.h  complex7DReg.cc  complex7DReg.h  complexDouble7DReg.cc  complexDouble7DReg.h  complexDoubleHyper.cc  complexDoubleHyper.h  complexDoubleTensor.cc  (+75 more)
python/: CMakeLists.txt  Makefile  SepIrregVector.py  SepTensor.py  SepVector.py  byte1D.cpp  byte2D.cpp  byte3D.cpp  byte4D.cpp  byte5D.cpp  byte6D.cpp  byteHyper.cpp  cmake_install.cmake  complex1D.cpp  complex2D.cpp  complex3D.cpp  complex4D.cpp  complex5D.cpp  complex6D.cpp  complexHyper.cpp  double1D.cpp  double2D.cpp  double3D.cpp  double4D.cpp  double5D.cpp  double6D.cpp  doubleHyper.cpp  float1D.cpp  float2D.cpp  float3D.cpp  float4D.cpp  float5D.cpp  float6D.cpp  floatHyper.cpp  int1D.cpp  int2D.cpp  int3D.cpp  int4D.cpp  int5D.cpp  int6D.cpp  (+27 more)
